Shipment creation, display and item display functions working

--- a/App/templates/main.html
+++ b/App/templates/main.html
@@ -7,6 +7,15 @@
 </head>
 <body>
     <h1>Backend Intern Challenge</h1>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <ul class=flashes>
+                {% for message in messages %}
+                    <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
 
     {% block changeLink %} {% endblock %}
     <hr>
