--- a/App/templates/main.html
+++ b/App/templates/main.html
@@ -3,22 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %} Shopify {% endblock %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     {% block script %} {% endblock %}
 </head>
 <body>
-    <h1>Backend Intern Challenge</h1>
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            <ul class=flashes>
-                {% for message in messages %}
-                    <li>{{ message }}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}
-    {% endwith %}
-
-    {% block changeLink %} {% endblock %}
-    <hr>
-    <div>{% block content %} {% endblock %}</div>
+    <div class="container-fluid">
+        <h1 class="row">
+            <span class="col display-3 text-center p-3">
+                Shopify Backend Intern Challenge
+            </span>
+        </h1>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <div class="row">
+                    {% for message in messages %}
+                        <div class="col fs-5">{{ message }}</div>
+                    {% endfor %}
+                </div>
+            {% endif %}
+        {% endwith %}
+        <div class="row">
+            <div class="col text-end">
+                {% block changeLink %} {% endblock %}
+            </div>
+        </div>
+        <hr>
+        <div class="container-fluid">{% block content %} {% endblock %}</div>
+    </div>
 </body>
 </html>
