Small Bug removed

--- a/App/templates/main.html
+++ b/App/templates/main.html
@@ -10,7 +10,7 @@
     <div class="container-fluid">
         <h1 class="row">
             <span class="col display-3 text-center p-3">
-                Shopify Backend Intern Challenge
+                Logistron 5000
             </span>
         </h1>
         {% with messages = get_flashed_messages() %}
